@@ -1,3 +1,7 @@
+06-25-21 : Monk Stuff
+           - Reduce mana cost of Chain and Blur
+           - Chain now works while using a weapon. Blur still requires bare hands
+
 06-24-21 : Area Damage Upgrade
            - Area damage spells increased by 50 percent accross the board
 
